--- a/main.html
+++ b/main.html
@@ -10,6 +10,18 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<h4><b>What is the capital of India?</b></h4>
+<div>
+<input type="radio" id="delhi" name="capital">
+<label for="delhi">New Delhi</label>
+</div>
+<div>
+<input type="radio" id="mumbai" name="capital">
+<label for="mumbai">Mumbai</label> 
+</div>
+<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+New Delhi is the capital of India and an administrative district of NCT Delhi.	
+</blockquote>
 
 </body>
 
